--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["common", "day01", "day02", "day03", "day04", "day05", "day06"]
+members = ["common", "day01", "day02", "day03", "day04", "day05", "day06", "day07"]
